--- a/israel-data-website (1).html
+++ b/israel-data-website (1).html
@@ -3,6 +3,7 @@
 <head>
     <title>Israel Data Visualization</title>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="logo.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
