--- a/israel-data-website (1).html
+++ b/israel-data-website (1).html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Israel Data Visualization</title>
+    <title>מפת חום חללי צהל</title>
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="logo.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
