--- a/israel-data-website (1).html
+++ b/israel-data-website (1).html
@@ -272,23 +272,23 @@
             <h3>משמעות הצבעים</h3>
             <div class="legend-item">
                 <div class="legend-color" style="background: red;"></div>
-                <span>גבוהה מאוד (8-10)</span>
+                <span>20+ חללים</span>
             </div>
             <div class="legend-item">
                 <div class="legend-color" style="background: yellow;"></div>
-                <span>גבוהה (6-8)</span>
+                <span>6-13 חללים</span>
             </div>
             <div class="legend-item">
                 <div class="legend-color" style="background: lime;"></div>
-                <span>בינוני (4-6)</span>
+                <span>3-5 חללים</span>
             </div>
             <div class="legend-item">
                 <div class="legend-color" style="background: cyan;"></div>
-                <span>נמוך (2-4)</span>
+                <span>2 חללים</span>
             </div>
             <div class="legend-item">
                 <div class="legend-color" style="background: blue;"></div>
-                <span>נמוך מאוד (0-2)</span>
+                <span>חלל אחד</span>
             </div>
         </div>
     </div>
@@ -376,7 +376,7 @@
         [31.246415, 34.4032541, 3, "ישע", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%99%D7%A9%D7%A2&unit=&startDate=&endDate="],
         [31.7730474, 34.8153077, 1, "רבדים", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A8%D7%91%D7%93%D7%99%D7%9D&unit=&startDate=&endDate="],
         [32.9792441, 35.1642671, 1, "עמקה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A2%D7%9E%D7%A7%D7%94&unit=&startDate=&endDate="],
-        [31.3741105, 34.3007456, 1, "גני טל", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%92%D7%A0%D7%99%20%D7%98%D7%9C&unit=&startDate=&endDate="],
+        [31.785688, 34.791801, 1, "גני טל", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%92%D7%A0%D7%99%20%D7%98%D7%9C&unit=&startDate=&endDate="],
         [32.8268051, 35.2328758, 3, "מורשת", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%9E%D7%95%D7%A8%D7%A9%D7%AA&unit=&startDate=&endDate="],
         [32.9847231, 35.2513938, 2, "יאנוח ג'ת", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%99%D7%90%D7%A0%D7%95%D7%97%20%D7%92%27%D7%AA&unit=&startDate=&endDate="],
         [31.7298209, 35.0726527, 1, "בר-גיורא", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%91%D7%A8-%D7%92%D7%99%D7%95%D7%A8%D7%90&unit=&startDate=&endDate="],
@@ -425,7 +425,7 @@
         [31.9753923, 34.891423, 1, "זיתן", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%96%D7%99%D7%AA%D7%9F&unit=&startDate=&endDate="],
         [33.0394679, 35.1109814, 1, "גשר הזיו", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%92%D7%A9%D7%A8%20%D7%94%D7%96%D7%99%D7%95&unit=&startDate=&endDate="],
         [31.7627391, 34.9686245, 1, "צרעה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A6%D7%A8%D7%A2%D7%94&unit=&startDate=&endDate="],
-        [24.7964355, 85.0079563, 2, "גיאה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%92%D7%99%D7%90%D7%94&unit=&startDate=&endDate="],
+        [31.626019, 34.60964, 2, "גיאה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%92%D7%99%D7%90%D7%94&unit=&startDate=&endDate="],
         [31.2972468, 34.9379061, 1, "חורה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%97%D7%95%D7%A8%D7%94&unit=&startDate=&endDate="],
         [31.4492727, 34.6547505, 1, "מבועים", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%9E%D7%91%D7%95%D7%A2%D7%99%D7%9D&unit=&startDate=&endDate="],
         [31.4241619, 34.4911156, 8, "בארי", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%91%D7%90%D7%A8%D7%99&unit=&startDate=&endDate="],
@@ -552,7 +552,7 @@
         [32.8851173, 35.3001894, 1, "אשחר", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%90%D7%A9%D7%97%D7%A8&unit=&startDate=&endDate="],
         [31.8318165, 34.7213367, 1, "כפר אביב", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%9B%D7%A4%D7%A8%20%D7%90%D7%91%D7%99%D7%91&unit=&startDate=&endDate="],
         [32.2632266, 35.1847555, 1, "שבי שומרון", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A9%D7%91%D7%99%20%D7%A9%D7%95%D7%9E%D7%A8%D7%95%D7%9F&unit=&startDate=&endDate="],
-        [45.7774551, 3.0819427, 1, "פארן", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A4%D7%90%D7%A8%D7%9F&unit=&startDate=&endDate="],
+        [30.360014, 35.159451, 1, "פארן", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A4%D7%90%D7%A8%D7%9F&unit=&startDate=&endDate="],
         [30.9869949, 34.9396772, 1, "ירוחם", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%99%D7%A8%D7%95%D7%97%D7%9D&unit=&startDate=&endDate="],
         [33.0760504, 35.1485842, 1, "שלומי", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A9%D7%9C%D7%95%D7%9E%D7%99&unit=&startDate=&endDate="],
         [32.3195061, 34.9001402, 2, "גנות הדר", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%92%D7%A0%D7%95%D7%AA%20%D7%94%D7%93%D7%A8&unit=&startDate=&endDate="],
@@ -561,11 +561,11 @@
         [32.2629094, 34.9712077, 1, "עזריאל", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A2%D7%96%D7%A8%D7%99%D7%90%D7%9C&unit=&startDate=&endDate="],
         [32.680809, 35.204844, 1, "קיבוץ רמת דוד", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A7%D7%99%D7%91%D7%95%D7%A5%20%D7%A8%D7%9E%D7%AA%20%D7%93%D7%95%D7%93&unit=&startDate=&endDate="],
         [31.7545714, 35.3104654, 1, "קידר", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A7%D7%99%D7%93%D7%A8&unit=&startDate=&endDate="],
-        [31.7815767, 35.2180856, 1, "אבן יהודה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%90%D7%91%D7%9F%20%D7%99%D7%94%D7%95%D7%93%D7%94&unit=&startDate=&endDate="],
+        [32.271117, 34.886023, 1, "אבן יהודה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%90%D7%91%D7%9F%20%D7%99%D7%94%D7%95%D7%93%D7%94&unit=&startDate=&endDate="],
         [31.230618, 35.06336, 1, "אבו רובעייה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%90%D7%91%D7%95%20%D7%A8%D7%95%D7%91%D7%A2%D7%99%D7%99%D7%94&unit=&startDate=&endDate="],
         [33.2417843, 35.5749608, 1, "כפר גלעדי", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%9B%D7%A4%D7%A8%20%D7%92%D7%9C%D7%A2%D7%93%D7%99&unit=&startDate=&endDate="],
         [31.9197545, 35.036877, 1, "כפר האורנים", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%9B%D7%A4%D7%A8%20%D7%94%D7%90%D7%95%D7%A8%D7%A0%D7%99%D7%9D&unit=&startDate=&endDate="],
-        [-36.078668, -65.457577, 1, "ארגנטינה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%90%D7%A8%D7%92%D7%A0%D7%98%D7%99%D7%A0%D7%94&unit=&startDate=&endDate="],
+        [-36.078668, -65.457577, 1, "עלה לארץ ארגנטינה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A2%D7%9C%D7%94%20%D7%9C%D7%90%D7%A8%D7%A5%20%D7%90%D7%A8%D7%92%D7%A0%D7%98%D7%99%D7%A0%D7%94&unit=&startDate=&endDate="],
         [33.006306, 35.0945579, 3, "נהריה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A0%D7%94%D7%A8%D7%99%D7%94&unit=&startDate=&endDate="],
         [31.89997, 34.90027, 1, "מושב יד רמבם", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%9E%D7%95%D7%A9%D7%91%20%D7%99%D7%93%20%D7%A8%D7%9E%D7%91%22%D7%9D&unit=&startDate=&endDate="],
         [31.9929588, 34.8532197, 1, "כפר חבד", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%9B%D7%A4%D7%A8%20%D7%97%D7%91%22%D7%93&unit=&startDate=&endDate="],
@@ -626,17 +626,17 @@
         [32.9533067, 35.165698, 1, "כפר יאסיף", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%9B%D7%A4%D7%A8%20%D7%99%D7%90%D7%A1%D7%99%D7%A3&unit=&startDate=&endDate="],
         [40.716667, -74.0, 1, "ניו יורק", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A0%D7%99%D7%95%20%D7%99%D7%95%D7%A8%D7%A7&unit=&startDate=&endDate="],
         [31.944497, 35.149319, 1, "חרשה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%97%D7%A8%D7%A9%D7%94&unit=&startDate=&endDate="],
-        [26.8234472, 18.1236723, 1, "לביא", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%9C%D7%91%D7%99%D7%90&unit=&startDate=&endDate="],
+        [32.786099, 35.441199, 1, "לביא", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%9C%D7%91%D7%99%D7%90&unit=&startDate=&endDate="],
         [31.7018538, 35.107317, 1, "ביתר עילית", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%91%D7%99%D7%AA%D7%A8%20%D7%A2%D7%99%D7%9C%D7%99%D7%AA&unit=&startDate=&endDate="],
         [32.0604256, 34.8760954, 1, "גני תקווה", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%92%D7%A0%D7%99%20%D7%AA%D7%A7%D7%95%D7%95%D7%94&unit=&startDate=&endDate="],
         [32.0821317, 35.0907027, 1, "ברוכין", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%91%D7%A8%D7%95%D7%9B%D7%99%D7%9F&unit=&startDate=&endDate="],
-        [32.730488, 35.546782, 1, "פוריה עילית", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A4%D7%95%D7%A8%D7%99%D7%94%20%D7%A2%D7%99%D7%9C%D7%99%D7%AA&unit=&startDate=&endDate="]        
-    ];
+        [32.730488, 35.546782, 1, "פוריה עילית", "https://www.idf.il/%D7%A0%D7%95%D7%A4%D7%9C%D7%99%D7%9D/%D7%97%D7%9C%D7%9C%D7%99-%D7%94%D7%9E%D7%9C%D7%97%D7%9E%D7%94?firstName=&lastName=&city=%D7%A4%D7%95%D7%A8%D7%99%D7%94%20%D7%A2%D7%99%D7%9C%D7%99%D7%AA&unit=&startDate=&endDate="]
+        ];
 
         // Initialize map
         const map = L.map('map', {
             zoomControl: true,
-            minZoom: 7,
+            minZoom: 5,
             tap: true // Enable tap handler for iOS
         }).setView([31.7683, 35.2137], 8);
 
@@ -649,19 +649,20 @@
         }).addTo(map);
 
         // Initialize heatmap layer
-        const maxIntensity = 6; // Replace with the actual maximum intensity in your data
+        const maxIntensity = 40; // Set to your actual maximum value
         const heatData = points.map(point => [point[0], point[1], point[2] / maxIntensity]);
         const heatLayer = L.heatLayer(heatData, {
-            radius: 25,
-            blur: 15,
-            maxZoom: 10,
-            gradient: {
-                0.4: 'blue',
-                0.6: 'cyan',
-                0.7: 'lime',
-                0.8: 'yellow',
-                1.0: 'red'
-            }
+        radius: 25,
+        blur: 20,
+        maxZoom: 10,
+        gradient: {
+            0.07: 'blue',   // 1 casualty
+            0.1: 'cyan',    // 2 casualties
+            0.2: 'lime',    // 3-5 casualties
+            0.4: 'yellow',   // 6-13 casualties
+            0.5: 'red',      // 14-19 casualties
+            0.6: 'purple'    // 20+ casualties
+        }
         }).addTo(map);
 
         // Initialize point layer
@@ -682,7 +683,7 @@
                 <div>
                     <h3>${point[3]}</h3>
                     <p>חללים: ${point[2]}</p>
-                    <a href="${point[4]}" target="_blank" class="popup-link">View Details →</a>
+                    <a href="${point[4]}" target="_blank" class="popup-link">לשמות החללים →</a>
                 </div>
             `;
             
@@ -698,11 +699,12 @@
         });
 
         function getColor(intensity) {
-            if (intensity > 8.0) return 'red';
-            if (intensity > 4.0) return 'yellow';
-            if (intensity > 2.0) return 'lime';
-            if (intensity > 1.0) return 'cyan';
-            return 'blue';
+        if (intensity >= 20) return 'purple';
+        if (intensity > 13) return 'red';
+        if (intensity > 5) return 'yellow';
+        if (intensity > 2) return 'lime';
+        if (intensity > 1) return 'cyan';
+        return 'blue';
         }
 
         // Toggle between heatmap and points based on zoom level
