--- a/israel-data-website (1).html
+++ b/israel-data-website (1).html
@@ -666,7 +666,7 @@
         }).addTo(map);
 
         // Initialize point layer
-        const pointsLayer = L.layerGroup().addTo(map);
+        const pointsLayer = L.layerGroup();
         
         // Create points with popups
         points.forEach(point => {
