adding a new project

--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
             padding: 1rem; 
         }
 
+        .top-right {
+            position: absolute;
+            top: 1rem;
+            left: 1rem;
+            padding: 1rem; 
+        }
+
         .gallery {
             display: grid;
             grid-template-columns: 1fr;
@@ -287,7 +294,8 @@
 <body>
     <canvas id="background-canvas"></canvas>
     <div class="container">
-        <a href="israel-data-website (1).html" class="social-link top-right">Project</a>
+        <a href="israel-data-website (1).html" class="social-link top-right">Hallim Heat Map</a>
+        <a href="https://wydrn6.github.io/boby/" class="social-link top-left">Doomsday Practice</a>
         <section class="hero">
             <div class="profile">
                 <img src="web04.jpeg" alt="Profile Picture" class="profile-image">
