--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             padding: 1rem; 
         }
 
-        .top-right {
+        .top-left {
             position: absolute;
             top: 1rem;
             left: 1rem;
