--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
 <body>
     <canvas id="background-canvas"></canvas>
     <div class="container">
-        <a href="israel-data-website (1).html" class="social-link top-right">Hallim Heat Map</a>
-        <a href="https://wydrn6.github.io/boby/" class="social-link top-left">Doomsday Practice</a>
+        <a href="israel-data-website (1).html" class="social-link top-right">Hallim</a>
+        <a href="https://wydrn6.github.io/boby/" class="social-link top-left">Doomsday</a>
         <section class="hero">
             <div class="profile">
                 <img src="web04.jpeg" alt="Profile Picture" class="profile-image">
