--- a/doubleSlit/doubleSlitArtical.html
+++ b/doubleSlit/doubleSlitArtical.html
@@ -389,7 +389,7 @@
                 <div class="article-content">
                     <p>
 זריז מה מרכיב גם את המסך שאתם קוראים בו גם את הכיסא שאתם יושבים עליו וגם את הלכלוך במקלדת שהייתם צריכים לנקות כבר מזמן. אטומים, אטומים הם אבני היסוד שהחפצים שסובבים אותנו מורכבים מהם הידע על אטומים נפוץ אך לא כולם יוכלו להגיד ממה מורכב האור
-.שסובב אותנו מורכב. זו שאלה מורכבת שמדענים גדולים כמו ניוטון והויגנס התווכחו עליה ובשביל לפתור אותה נצטרך לחזור אחורה בזמן
+שסובב אותנו מורכב. זו שאלה מורכבת שמדענים גדולים כמו ניוטון והויגנס התווכחו עליה ובשביל לפתור אותה נצטרך לחזור אחורה בזמן.
                     </p>
                     <p>המדען שפתר את התעלומה הזאת היה בעל ידע כה רב תחומי עד שהביוגרפיה שלו כונתה ״האיש האחרון שידע הכל״ למדען קראו טומאס יאנג.
 ב-1801 יאנג עיצב ניסוי פשוט למדי אבל שבפעם הראשונה הצליח להראות בדיוק ממה מורכב אור.
