--- a/doubleSlit/doubleSlitArtical.html
+++ b/doubleSlit/doubleSlitArtical.html
@@ -364,7 +364,7 @@
             <div class="header-content">
                 <a href="#" class="logo">רז גנאור</a>
                 <div class="nav-section">
-                    <a href="updated_blog_hebrew.html" class="back-link">→ חזרה לבלוג</a>
+                    <a href="https://razg.xyz" class="back-link">→ חזרה לבלוג</a>
                     <button class="theme-toggle" onclick="toggleTheme()" aria-label="החלף מצב כהה">
                         <span id="theme-icon">🌙</span>
                     </button>
