--- a/doubleSlit/doubleSlitArtical.html
+++ b/doubleSlit/doubleSlitArtical.html
@@ -388,7 +388,7 @@
 
                 <div class="article-content">
                     <p>
-זריז מה מרכיב גם את המסך שאתם קוראים בו גם את הכיסא שאתם יושבים עליו וגם את הלכלוך במקלדת שהייתם צריכים לנקות כבר מזמן. אטומים, אטומים הם אבני היסוד שהחפצים שסובבים אותנו מורכבים מהם הידע על אטומים נפוץ אך לא כולם יוכלו להגיד ממה מורכב האור
+זריז מה מרכיב גם את המסך שאתם קוראים בו גם את הכיסא שאתם יושבים עליו וגם את הלכלוך במקלדת שהייתם צריכים לנקות כבר מזמן. אטומים, אטומים הם אבני היסוד שהחפצים שסובבים אותנו מורכבים מהם, הידע על אטומים נפוץ אך לא כולם יוכלו להגיד ממה מורכב האור
 שסובב אותנו מורכב. זו שאלה מורכבת שמדענים גדולים כמו ניוטון והויגנס התווכחו עליה ובשביל לפתור אותה נצטרך לחזור אחורה בזמן.
                     </p>
                     <p>המדען שפתר את התעלומה הזאת היה בעל ידע כה רב תחומי עד שהביוגרפיה שלו כונתה ״האיש האחרון שידע הכל״ למדען קראו טומאס יאנג.
@@ -398,25 +398,25 @@
 
                     <h2>ניסוי שתי הסדקים</h2>
                     
-                    <p>באותן שנים הוויכוח המדעי יכל להתפלג לשתיים. כאלה שהאמינו שאור מורכב מגל שיוצא ממקור האור וכאלה שהאמינו שהוא מורכב מהמון חלקיקים (כדורים) קטנים.
-בשביל ליישב את הוויכוח יאנג לקח שתי חריצים וכיוון אותם אל מול השמש. הוא כיסה רק את אחד החריצים ורק אה את הצורה של האור שפוגע במסך מאחור</p>
+                    <p>באותן שנים הוויכוח המדעי התפלג לשניים. כאלה שהאמינו שאור מורכב מגל שיוצא ממקור האור וכאלה שהאמינו שהוא מורכב מהמון חלקיקים (כדורים) קטנים.
+בשביל ליישב את הוויכוח יאנג הציב שני חריצים אל מול השמש. הוא כיסה רק את אחד החריצים ורק אה את הצורה של האור שפוגע במסך מאחור.</p>
                     
                     <img src="untitled1.png" alt="תמונה המדגימה את הניסוי הראשוני של יאנג" loading="lazy">
 
-                    <p>לאחר מכן הוא החליף בין החריץ המכוסה לפתוח וקיבל את הצורה הבאה</p>
+                    <p>לאחר מכן הוא החליף בין החריץ המכוסה לפתוח וקיבל את הצורה הבאה.</p>
 
                     <img src="untitled2.png" alt="תמונה המדגימה את הניסוי הראשוני של יאנג" loading="lazy">
 
-	                <p>עד כה לא בדיוק "הבן אדם האחרון שידע הכל". כל אחד יכל לנחש מה יקרה בניסוי ולכן לא יפתיע אותנו שכשהוא יוריד את הכיסוי נראה את שילוב שתי התוצאות הקודמות</p>
+	                <p>.עד כה לא בדיוק "הבן אדם האחרון שידע הכל". כל אחד יכל לנחש מה יקרה בניסוי ולכן לא יפתיע אותנו שכשהוא יוריד את הכיסוי נראה את שילוב שתי התוצאות הקודמות</p>
 		
 	                <img src="untitled.png" alt="תמונה המדגימה את הציפיה שלנו מהניסוי" loading="lazy">
 
-	                <p>אך כשהוא פתח את שני החריצים יאנג ראה על המסך צורה כזו</p>
+	                <p>אך כשהוא פתח את שני החריצים יאנג ראה על המסך צורה כזו.</p>
 		
 	                <img src="untitled5.png" alt="תמונה המדגימה תוצאות ניסוי שני החריצים" loading="lazy">
 
-                    <p>השם של הצורה הזאת ואיך שפיזיקאים יקראו לדבר שיאנג ראה על המסך זה צורת התעבכות של שתי גלים. במילים פשוטות זה אומר שהאור שעובר מחריץ אחד
-על האור שעובר מחריץ השני. ולכן לא נראה את שילוב שתי התוצאות הקודמות, אלה נראה נקודות בהירות כששני הגלים יגיעו בשיא הגל ויחזקו אחד את השני ונהקודות החשוכות יווצרו כשגל מחריץ
+                    <p>השם של הצורה הזאת ואיך שפיזיקאים יקראו לדבר שיאנג ראה על המסך זה צורת התעבכות של שתי גלים. במילים פשוטות זה אומר שהאור שעובר מחריץ אחד משפיע
+על האור שעובר מחריץ השני. ולכן לא נראה את שילוב שתי התוצאות הקודמות, אלה נראה נקודות בהירות כששני הגלים יגיעו בשיא הגל ויחזקו אחד את השני והנקודות החשוכות יווצרו כשגל מחריץ
 אחד בשפלו הגל מהחריץ השני בשיאו ויבטלו אחד את השני.</p>
 
 
@@ -424,7 +424,7 @@
 
                     <h3>אינשטיין מגיע להרוס הכל</h3>
 
-                    <p> כדבר שהפך כבר להרגלו אינשטיין ב-1921 מקבל פרס נובל על גילוי שהופך את הקונסזוס המדעי על ראשו.
+                    <p> כדבר שהפך כבר להרגלו, אינשטיין ב-1921 מקבל פרס נובל על גילוי שהופך את הקונצנזוס המדעי על ראשו.
                         בלי להיכנס לפרטים הטכנים הוא הראה שהמהירות שאלקטרונים משתחררים ממתכת כשמכוונים עליה אור תלויה 
                         <b style="font-size: 1.1em; font-weight: 700;">בצבע</b>
                         של האור ולא בעוצמה שלו. 
