--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <a href="#" class="logo">רז גנאור</a>
                 <div class="nav-section">
                     <nav>
-                        <a href="raz.html">אודות</a>
+                        <a href="portfolio/raz.html">אודות</a>
                     </nav>
                     <button class="theme-toggle" onclick="toggleTheme()" aria-label="החלף מצב כהה">
                         <span id="theme-icon">🌙</span>
