--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             <div class="footer-content">
                 <div class="social-links">
                     <a href="https://github.com/wydrn6">GitHub</a>
-                    <a href="mailto:raz.ganor@gmail.com">מייל</a>
+                    <a href="mailto:raz9ganor@gmail.com">מייל</a>
                 </div>
                 <p>&copy; 2024 רז גנאור. כל הזכויות שמורות.</p>
             </div>
