--- a/doubleSlit/doubleSlitArtical.html
+++ b/doubleSlit/doubleSlitArtical.html
@@ -653,7 +653,7 @@
 
                     <p>כדבר שהפך כבר להרגלו, אינשטיין ב-1921 מקבל פרס נובל על גילוי שהופך את הקונצנזוס המדעי על ראשו. בלי להיכנס לפרטים הטכניים הוא הראה שהמהירות שאלקטרונים משתחררים ממתכת שמכוונים עליה אור תלויה 
                         <b style="font-size: 1.1em; font-weight: 700;">בצבע</b>
-                         של האור ולא בעוצמה שלו. בעצם הוכיח שאור אינו רציף, אלא נפלט ונקלט בפקטות אנרגיה בדידות. פקטות אנרגיה אלו כונו על ידו פוטונים.
+                        של האור ולא בעוצמה שלו. בעצם הוכיח שאור אינו רציף, אלא נפלט ונקלט בפקטות אנרגיה בדידות (חלקיקים). פקטות אנרגיה אלו כונו על ידו פוטונים.
                     </p>
 
                     <p>בעצם יש לנו קונפליקט בין שני הניסויים כאשר אחד מראה תוצאות שנראות לנו מנוגדות לחלוטין לתוצאות הניסוי השני. אחד תומך במודל של גלים בזמן שהשני תומך במודל של חלקיקים.</p>
@@ -672,8 +672,8 @@
 
 	                <h3>חזרה להיגיון</h3>
 
-	                <p>עם השנים התפתחו אינטרפרטציות שונות במטרה להסביר את כל המוזרות שרואים בניסויים. כיום האינטרפרטציה המקובלת ביותר נקראת אינטרפרטציית קופנהגן שבה חלקיקים קוונטים מיוצגים על ידי גל הסתברות עד שהוא נמדד (לדוגמא המסך בניסוי שלנו) ואז גל ההסתברויות קורס לנקודה אחת בהתאם להסתברות הגל. בניסוי שלנו זה יראה ככה.</p>
-
+                    <p>עם השנים התפתחו אינטרפרטציות שונות במטרה להסביר את כל המוזרות שרואים בניסויים. כיום האינטרפרטציה המקובלת ביותר נקראת אינטרפרטציית קופנהגן שבה חלקיקים קוונטים מיוצגים על ידי גל הסתברות עד שהוא נמדד ואז גל ההסתברויות קורס לנקודה אחת בהתאם להסתברות הגל. מדידה בהקשר זה היא כל דבר שיאפשר לדעת איפה החלקיק נמצא בדיוק (המסך הוא כלי מדידה בניסוי שלנו). שבניסוי שלנו זה יראה ככה.</p>
+                    
                     <img src="Anim.gif" alt="תמונה של אינטרפרטצית קופנהגן" loading="lazy">
 
                     <p>למצב שהחלקיקים נמצאים בו לפני שמודדים אותם קוראים סופרפוזיציה קוונטית כדי לתת שם לתופעה הזאת שאנחנו לא יכולים לתפוס.</p>
