--- a/doubleSlit/doubleSlitArtical.html
+++ b/doubleSlit/doubleSlitArtical.html
@@ -672,8 +672,8 @@
 
 	                <h3>חזרה להיגיון</h3>
 
-                    <p>עם השנים התפתחו אינטרפרטציות שונות במטרה להסביר את כל המוזרות שרואים בניסויים. כיום האינטרפרטציה המקובלת ביותר נקראת אינטרפרטציית קופנהגן שבה חלקיקים קוונטים מיוצגים על ידי גל הסתברות עד שהוא נמדד ואז גל ההסתברויות קורס לנקודה אחת בהתאם להסתברות הגל. מדידה בהקשר זה היא כל דבר שיאפשר לדעת איפה החלקיק נמצא בדיוק (המסך הוא כלי מדידה בניסוי שלנו). שבניסוי שלנו זה יראה ככה.</p>
-                    
+                    <p>עם השנים התפתחו אינטרפרטציות שונות במטרה להסביר את כל המוזרות שרואים בניסויים. כיום האינטרפרטציה המקובלת ביותר נקראת אינטרפרטציית קופנהגן שבה חלקיקים קוונטים מיוצגים על ידי גל הסתברות עד שהוא נמדד ואז גל ההסתברויות קורס לנקודה אחת בהתאם להסתברות הגל. מדידה בהקשר זה היא כל דבר שיאפשר לדעת איפה החלקיק נמצא בדיוק (המסך הוא כלי מדידה בניסוי שלנו). בניסוי שלנו זה יראה ככה.</p>
+
                     <img src="Anim.gif" alt="תמונה של אינטרפרטצית קופנהגן" loading="lazy">
 
                     <p>למצב שהחלקיקים נמצאים בו לפני שמודדים אותם קוראים סופרפוזיציה קוונטית כדי לתת שם לתופעה הזאת שאנחנו לא יכולים לתפוס.</p>
