Fix Hebrew text for clarity and accuracy

--- a/doubleSlit/doubleSlitArtical.html
+++ b/doubleSlit/doubleSlitArtical.html
@@ -645,7 +645,7 @@
 		
 	                <img src="untitled5.png" alt="תמונה המדגימה תוצאות ניסוי שני החריצים" loading="lazy">
 
-                    <p>השם של הצורה הזאת ואיך שפיזיקאים יקראו לדבר שיאנג ראה על המסך זה צורת התאבכות של שתי גלים. במילים פשוטות זה אומר שהאור שעובר מחריץ אחד משפיע על האור שעובר מחריץ השני. ולכן לא נראה את שילוב שתי התוצאות הקודמות, אלא נראה נקודות בהירות כששני הגלים יגיעו בשיא הגל ויחזקו אחד את השני והנקודות החשוכות יווצרו כשגל מחריץ אחד בשפלו הגל מהחריץ השני בשיאו ויבטלו אחד את השני.</p>
+                    <p>השם של הצורה הזאת ואיך שפיזיקאים יקראו לדבר שיאנג ראה על המסך זה צורת התאבכות של שתי גלים. במילים פשוטות זה אומר שהאור שעובר מחריץ אחד משפיע על האור שעובר מהחריץ השני. ולכן לא נראה את שילוב שתי התוצאות הקודמות, אלא נראה נקודות בהירות כששני הגלים יגיעו בשיא הגל ויחזקו אחד את השני והנקודות החשוכות יווצרו כשגל מחריץ אחד בשפלו הגל מהחריץ השני בשיאו ויבטלו אחד את השני.</p>
 
                     <img src="waves_inter_b.jpg" alt="תמונה המדגימה תוצאות ניסוי שני החריצים" loading="lazy">
 
@@ -672,7 +672,7 @@
 
 	                <h3>חזרה להיגיון</h3>
 
-                    <p>עם השנים התפתחו אינטרפרטציות שונות במטרה להסביר את כל המוזרות שרואים בניסויים. כיום האינטרפרטציה המקובלת ביותר נקראת אינטרפרטציית קופנהגן שבה חלקיקים קוונטים מיוצגים על ידי גל הסתברות עד שהוא נמדד ואז גל ההסתברויות קורס לנקודה אחת בהתאם להסתברות הגל. מדידה בהקשר זה היא כל דבר שיאפשר לדעת איפה החלקיק נמצא בדיוק (המסך הוא כלי מדידה בניסוי שלנו). בניסוי שלנו זה יראה ככה.</p>
+                    <p>עם השנים התפתחו אינטרפרטציות שונות במטרה להסביר את כל המוזרות שרואים בניסויים. כיום האינטרפרטציה המקובלת ביותר נקראת אינטרפרטציית קופנהגן שבה חלקיקים קוונטים מיוצגים על ידי גל הסתברות עד שהוא נמדד ואז גל ההסתברויות קורס לנקודה אחת בהתאם להסתברות הגל. מדידה בהקשר זה היא כל דבר שיאפשר לדעת איפה החלקיק נמצא בדיוק. המסך נחשב מדידה בניסוי שלנו כי הוא מראה לנו בדיוק איפה החלקיק נמצא כשהוא פוגע בו. לכן בניסוי שלנו זה יראה ככה.</p>
 
                     <img src="Anim.gif" alt="תמונה של אינטרפרטצית קופנהגן" loading="lazy">
 
